syntax = "proto3";

message HttpExceptionMessage {
  string message = 1;
  string code = 2;
}

message HttpException {
  int32 statusCode = 1;
  repeated HttpExceptionMessage message = 2;
  string error = 3;
}
